--- a/ExportDatabase/ExportDatabase/ExportDatabase.csproj
+++ b/ExportDatabase/ExportDatabase/ExportDatabase.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Xaml" />
@@ -65,6 +66,7 @@
     <Compile Include="Command\ExportDatabase.cs" />
     <Compile Include="Constant\ConstantValue.cs" />
     <Compile Include="Database\Dao\CategoryDao.cs" />
+    <Compile Include="Database\Dao\ParameterBindingDao.cs" />
     <Compile Include="Database\Dao\ParameterNameDao.cs" />
     <Compile Include="Database\Dao\TaskDao.cs" />
     <Compile Include="Database\EF\Category.cs" />
@@ -78,15 +80,28 @@
     <Compile Include="Database\EF\Task.cs" />
     <Compile Include="ProjectData\EF\Singleton.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="WPF\DatabaseManagement.xaml.cs">
       <DependentUpon>DatabaseManagement.xaml</DependentUpon>
     </Compile>
+    <Compile Include="WPF\Data\Dao\WPFParameterNameDao.cs" />
     <Compile Include="WPF\Data\EF\WPFDbContext.cs" />
     <Compile Include="WPF\GridHelpers.cs" />
-    <Compile Include="WPF\Property\CategorySelectionChangedProperty.cs" />
-    <Compile Include="WPF\Property\MessageBoxClickedProperty.cs" />
-    <Compile Include="WPF\Property\UsedParameterSelectionChangedProperty.cs" />
-    <Compile Include="WPF\Property\WindowLoadedProperty.cs" />
+    <Compile Include="WPF\Property\Button\RemoveParametersClicked.cs" />
+    <Compile Include="WPF\Property\Button\AddParametersClicked.cs" />
+    <Compile Include="WPF\Property\ComboBox\CategorySelectionChanged.cs" />
+    <Compile Include="WPF\Property\Grid\GridRowColumnCount.cs" />
+    <Compile Include="WPF\Property\Grid\GridColumnWidths.cs" />
+    <Compile Include="WPF\Property\Grid\GridRowWidths.cs" />
+    <Compile Include="WPF\Property\ListBox\UnusedParameterKeyBoardFocusWithinChanged.cs" />
+    <Compile Include="WPF\Property\ListBox\UsedParameterKeyBoardFocusWithinChanged.cs" />
+    <Compile Include="WPF\Property\Button\MessageBoxClicked.cs" />
+    <Compile Include="WPF\Property\ListBox\UsedParameterSelectionChanged.cs" />
+    <Compile Include="WPF\Property\Window\WindowLoaded.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -94,13 +109,32 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ProjectData\Dao\" />
-    <Folder Include="WPF\Data\Dao\" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="WPF\DatabaseManagement.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\rewind.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\next.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\forward.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\back.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
