--- a/ExportDatabase/ExportDatabase/ExportDatabase.csproj
+++ b/ExportDatabase/ExportDatabase/ExportDatabase.csproj
@@ -85,22 +85,27 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="WPF\AddItem.xaml.cs">
+      <DependentUpon>AddItem.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WPF\DatabaseManagement.xaml.cs">
       <DependentUpon>DatabaseManagement.xaml</DependentUpon>
     </Compile>
     <Compile Include="WPF\Data\Dao\WPFParameterNameDao.cs" />
+    <Compile Include="WPF\Data\EF\AddItemType.cs" />
     <Compile Include="WPF\Data\EF\WPFDbContext.cs" />
-    <Compile Include="WPF\GridHelpers.cs" />
+    <Compile Include="WPF\Property\Button\AddItemClicked.cs" />
     <Compile Include="WPF\Property\Button\RemoveParametersClicked.cs" />
     <Compile Include="WPF\Property\Button\AddParametersClicked.cs" />
+    <Compile Include="WPF\Property\ComboBox\UsedTaskSelectionChanged.cs" />
     <Compile Include="WPF\Property\ComboBox\CategorySelectionChanged.cs" />
     <Compile Include="WPF\Property\Grid\GridRowColumnCount.cs" />
     <Compile Include="WPF\Property\Grid\GridColumnWidths.cs" />
     <Compile Include="WPF\Property\Grid\GridRowWidths.cs" />
     <Compile Include="WPF\Property\ListBox\UnusedParameterKeyBoardFocusWithinChanged.cs" />
     <Compile Include="WPF\Property\ListBox\UsedParameterKeyBoardFocusWithinChanged.cs" />
-    <Compile Include="WPF\Property\Button\MessageBoxClicked.cs" />
     <Compile Include="WPF\Property\ListBox\UsedParameterSelectionChanged.cs" />
+    <Compile Include="WPF\Property\Window\AddItemWindowClosing.cs" />
     <Compile Include="WPF\Property\Window\WindowLoaded.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -111,6 +116,10 @@
     <Folder Include="ProjectData\Dao\" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="WPF\AddItem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="WPF\DatabaseManagement.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -135,6 +144,16 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\add.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\delete.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
