--- a/ExportDatabase/ExportDatabase/ExportDatabase.csproj
+++ b/ExportDatabase/ExportDatabase/ExportDatabase.csproj
@@ -66,6 +66,8 @@
     <Compile Include="Command\ExportDatabase.cs" />
     <Compile Include="Constant\ConstantValue.cs" />
     <Compile Include="Database\Dao\CategoryDao.cs" />
+    <Compile Include="Database\Dao\ValueDao.cs" />
+    <Compile Include="Database\Dao\ValueBindingDao.cs" />
     <Compile Include="Database\Dao\ParameterBindingDao.cs" />
     <Compile Include="Database\Dao\ParameterNameDao.cs" />
     <Compile Include="Database\Dao\TaskDao.cs" />
@@ -73,11 +75,13 @@
     <Compile Include="Database\EF\Element.cs" />
     <Compile Include="Database\EF\ParameterBinding.cs" />
     <Compile Include="Database\EF\ParameterName.cs" />
-    <Compile Include="Database\EF\ParameterValue.cs" />
     <Compile Include="Database\EF\Project.cs" />
     <Compile Include="Database\EF\ProjectDbContext.cs" />
     <Compile Include="Database\EF\sysdiagram.cs" />
     <Compile Include="Database\EF\Task.cs" />
+    <Compile Include="Database\EF\User.cs" />
+    <Compile Include="Database\EF\Value.cs" />
+    <Compile Include="Database\EF\ValueBinding.cs" />
     <Compile Include="ProjectData\EF\Singleton.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -88,12 +92,20 @@
     <Compile Include="WPF\AddItem.xaml.cs">
       <DependentUpon>AddItem.xaml</DependentUpon>
     </Compile>
+    <Compile Include="WPF\Converter\CategoryToIndexConverter.cs" />
+    <Compile Include="WPF\Converter\TaskToIndexConverter.cs" />
+    <Compile Include="WPF\Converter\AddItemTypeToTitleConverter.cs" />
     <Compile Include="WPF\DatabaseManagement.xaml.cs">
       <DependentUpon>DatabaseManagement.xaml</DependentUpon>
     </Compile>
+    <Compile Include="WPF\Data\Dao\WPFCategoryDao.cs" />
     <Compile Include="WPF\Data\Dao\WPFParameterNameDao.cs" />
-    <Compile Include="WPF\Data\EF\AddItemType.cs" />
+    <Compile Include="WPF\Data\Dao\WPFTaskDao.cs" />
+    <Compile Include="WPF\Data\EF\ItemTypeEnum.cs" />
     <Compile Include="WPF\Data\EF\WPFDbContext.cs" />
+    <Compile Include="WPF\Property\Button\RemoveItemClicked.cs" />
+    <Compile Include="WPF\Property\Button\DemoClicked.cs" />
+    <Compile Include="WPF\Property\Button\AddItemOKClicked.cs" />
     <Compile Include="WPF\Property\Button\AddItemClicked.cs" />
     <Compile Include="WPF\Property\Button\RemoveParametersClicked.cs" />
     <Compile Include="WPF\Property\Button\AddParametersClicked.cs" />
